--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ modId="super-decaying-simulator-2022"
 version="${file.jarVersion}"
 displayName="Super Decaying Simulator 2022"
 displayURL="https://github.com/quat1024/super-decaying-simulator-2022/"
-#logoFile="examplemod.png" #TODO
+logoFile="icon_128.png"
 credits="Ur mom"
 authors="quaternary"
 description="Botania addon, lets you make all the flowers decay lol"
